--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -18,14 +18,15 @@
     }
 }
 
-.open {
+.Open {
     transform: translateX(0);
 }
 
-.close {
+.Close {
     transform: translateX(-100%);
 }
 
 .Logo {
     height: 11%;
+    margin-bottom: 32px;
 }
